--- a/prestamos.html
+++ b/prestamos.html
@@ -92,13 +92,11 @@
                     class="w-full lg:w-auto bg-black text-white px-6 py-3 rounded-xl font-black flex items-center justify-center gap-2 text-xs shadow-lg hover:scale-105 transition-transform">
                     <span class="material-symbols-outlined text-lg">add_card</span> Nuevo Préstamo
                 </button>
+                <button onclick="exportarPrestamos()"
+                    class="w-full lg:w-auto bg-white border border-gray-300 px-5 py-3 rounded-xl font-bold flex items-center justify-center gap-2 text-sm hover:bg-gray-50 transition-all shadow-sm">
+                    <span class="material-symbols-outlined text-lg">download</span> Exportar
+                </button>
             </div>
-        </header>button onclick="exportarPrestamos()"
-        class="bg-white border border-gray-300 px-5 py-3 rounded-xl font-bold flex items-center gap-2 text-sm
-        hover:bg-gray-50 transition-all shadow-sm">
-        <span class="material-symbols-outlined text-lg">download</span> Exportar
-        </button>
-        </div>
         </header>
 
         <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
