--- a/inversiones.html
+++ b/inversiones.html
@@ -62,7 +62,7 @@
 
     <div id="sidebar-container"></div>
 
-    <main class="pt-20 lg:pt-0 flex-1  p-4 lg:p-8 space-y-8">
+    <main class="pt-20 lg:pt-0 flex-1  p-4 lg:p-8 space-y-8 min-w-0">
         <header class="flex flex-col lg:flex-row justify-between items-start lg:items-center gap-4 lg:gap-0">
             <div>
                 <nav class="text-[10px] font-bold text-gray-400 uppercase tracking-widest mb-1">Gestión Financiera /
