--- a/reportes.html
+++ b/reportes.html
@@ -109,7 +109,7 @@
         <!-- KPIs COMPARATIVOS -->
         <section>
             <h3 class="text-sm font-black uppercase tracking-widest text-gray-400 mb-4">Comparativo de Sucursales</h3>
-            <div class="grid grid-cols-2 lg:grid-cols-4 gap-4">
+            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4">
                 <div class="card p-5 metric-card border-l-4 border-emerald-500">
                     <p class="text-[9px] font-black text-gray-400 uppercase tracking-widest mb-1">Ingresos Totales</p>
                     <div class="flex justify-between items-end">
