--- a/dashboard.html
+++ b/dashboard.html
@@ -12,7 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
         rel="stylesheet" />
     <!-- PWA Config -->
-    <!-- PWA Config handled in config.js -->
+    <link rel="manifest" id="pwa-manifest" href="manifest.json">
+    <link rel="apple-touch-icon" id="apple-icon" href="icon-prod-192.png">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#e63946">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
