--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;800&display=swap" rel="stylesheet" />
     <!-- PWA Config -->
-    <!-- PWA Config handled in config.js -->
+    <link rel="manifest" id="pwa-manifest" href="manifest.json">
+    <link rel="apple-touch-icon" id="apple-icon" href="icon-prod-192.png">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#e63946">
     <script id="tailwind-config">
