--- a/control_efectivo.html
+++ b/control_efectivo.html
@@ -171,8 +171,9 @@
         </footer>
 
         <script src="config.js"></script>
-    <script src="api.js"></script>
+        <script src="api.js"></script>
         <script src="auth.js"></script>
+        <script src="permisos.js"></script>
         <script src="menu.js"></script>
         <script src="configuracion.js"></script> <!-- Reutilizamos lógica de config -->
         <script src="control_efectivo.js"></script>
