--- a/inventario.html
+++ b/inventario.html
@@ -71,7 +71,7 @@
                     class="bg-white border border-gray-200 px-6 py-3 rounded-xl font-bold text-sm shadow-sm hover:bg-gray-50 flex items-center justify-center gap-2 w-full lg:w-auto">
                     <span class="material-symbols-outlined text-lg">download</span> Exportar
                 </button>
-                <button onclick="abrirModal()"
+                <button onclick="abrirModal()" data-permiso-editar="inventario"
                     class="btn-primary flex items-center justify-center gap-3 px-6 py-3 rounded-xl font-bold text-sm shadow-xl shadow-gray-200 w-full lg:w-auto">
                     <span class="material-symbols-outlined text-xl">add</span> Registrar Mes
                 </button>
