--- a/dashboard.html
+++ b/dashboard.html
@@ -238,6 +238,7 @@
 
     <script src="api.js"></script>
     <script src="auth.js"></script>
+    <script src="permisos.js"></script>
     <script src="menu.js"></script>
     <script src="dashboard.js"></script>
     <script>
