--- a/gastos.html
+++ b/gastos.html
@@ -88,7 +88,7 @@
                 <p class="text-gray-500 text-sm font-medium">Control de egresos y facturación de Agrigarden</p>
             </div>
             <div class="flex flex-col lg:flex-row gap-3 w-full lg:w-auto">
-                <button onclick="mostrarModalGasto()"
+                <button onclick="mostrarModalGasto()" data-permiso-editar="gastos"
                     class="w-full lg:w-auto bg-[#e63946] text-white px-6 py-3 rounded-xl font-black flex items-center justify-center gap-2 text-xs shadow-lg shadow-[#e63946]/20 hover:brightness-110 transition-all">
                     <span class="material-symbols-outlined text-lg">add_circle</span> Registrar Nuevo Gasto
                 </button>
@@ -335,7 +335,7 @@
             <div class="p-4 lg:p-8 bg-gray-50/50 border-t border-gray-100 flex gap-3">
                 <button onclick="cerrarModalEdicion()"
                     class="flex-1 py-4 text-[11px] font-black uppercase text-gray-400 hover:text-gray-600 transition-all">Cancelar</button>
-                <button onclick="actualizarGasto()"
+                <button onclick="actualizarGasto()" data-permiso-editar="gastos"
                     class="flex-[2] bg-black text-white py-4 rounded-2xl font-black uppercase text-[11px] tracking-[0.15em] hover:brightness-110 active:scale-95 transition-all flex items-center justify-center gap-2 shadow-lg shadow-black/10">
                     <span class="material-symbols-outlined text-sm">save</span> Guardar Cambios
                 </button>
@@ -345,6 +345,7 @@
 
     <script src="api.js"></script>
     <script src="auth.js"></script>
+    <script src="permisos.js"></script>
     <script src="menu.js"></script>
     <script src="export_helper.js"></script>
     <script src="gastos.js"></script>
