--- a/ventas.html
+++ b/ventas.html
@@ -760,7 +760,8 @@
 
 <!-- Scripts -->
 <script src="config.js"></script>
-    <script src="api.js"></script>
+<script src="api.js"></script>
+<script src="permisos.js"></script>
 <script src="menu.js"></script>
 <script src="ventas.js"></script>
 <script>
