--- a/configuracion.html
+++ b/configuracion.html
@@ -369,11 +369,16 @@
             const modulos = [
                 { id: 'dashboard', n: 'Dashboard' },
                 { id: 'ventas', n: 'Punto de Venta' },
-                { id: 'ingresos', n: 'Ingresos / Cxc' },
-                { id: 'gastos', n: 'Gastos / Compras / Cxp' },
+                { id: 'ingresos', n: 'Ingresos (Caja)' },
+                { id: 'cobrar', n: 'Cuentas por Cobrar (CxC)' },
+                { id: 'gastos', n: 'Gastos de Operación' },
+                { id: 'compras', n: 'Compras de Inventario' },
+                { id: 'pagar', n: 'Cuentas por Pagar (CxP)' },
                 { id: 'rrhh', n: 'Recursos Humanos' },
-                { id: 'inventario', n: 'Inventario / Productos' },
-                { id: 'inversiones', n: 'Inversiones / Préstamos' },
+                { id: 'inventario', n: 'Inventario (Mensual)' },
+                { id: 'productos', n: 'Catálogo de Productos' },
+                { id: 'inversiones', n: 'Inversiones' },
+                { id: 'prestamos', n: 'Préstamos' },
                 { id: 'flotilla', n: 'Control de Flotillas' },
                 { id: 'efectivo', n: 'Control de Efectivo' },
                 { id: 'reportes', n: 'Reportes' },
