--- a/inversiones.html
+++ b/inversiones.html
@@ -13,6 +13,7 @@
         rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
         rel="stylesheet" />
+    <script src="permisos.js"></script>
     <script>
         tailwind.config = {
             theme: {
@@ -101,7 +102,7 @@
                 </p>
                 <span id="depreciacionEst" class="text-2xl font-extrabold text-red-500">-$0.00</span>
                 <div class="mt-2 flex items-center gap-2">
-                    <button onclick="generarDepreciacionManual()"
+                    <button onclick="generarDepreciacionManual()" data-permiso-editar="inversiones"
                         class="text-[9px] font-black uppercase bg-red-50 text-red-600 px-3 py-1.5 rounded-lg hover:bg-red-100 transition-all flex items-center gap-1">
                         <span class="material-symbols-outlined text-xs">add_circle</span> Registrar en Gastos
                     </button>
@@ -283,7 +284,7 @@
                         </div>
                     </div>
 
-                    <button type="submit"
+                    <button type="submit" data-permiso-editar="inversiones"
                         class="w-full bg-primary text-black font-black uppercase text-xs py-4 rounded-xl shadow-lg shadow-primary/20 hover:brightness-105 transition-all">
                         Guardar Inversión
                     </button>
@@ -300,6 +301,7 @@
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             if (typeof inyectarMenu === 'function') inyectarMenu('inversiones');
+            if (typeof Permisos !== 'undefined') Permisos.aplicarPermisosUI();
             if (typeof cargarInversiones === 'function') cargarInversiones();
 
             const chkSync = document.getElementById('syncGasto');
