--- a/prestamos.html
+++ b/prestamos.html
@@ -13,6 +13,7 @@
         rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
         rel="stylesheet" />
+    <script src="permisos.js"></script>
     <script>
         tailwind.config = {
             theme: {
@@ -88,7 +89,7 @@
                 <p class="text-gray-500 text-sm font-medium">Gestión de créditos y amortizaciones.</p>
             </div>
             <div class="flex flex-col lg:flex-row gap-3 w-full lg:w-auto">
-                <button onclick="abrirModalNuevoPrestamo()"
+                <button onclick="abrirModalNuevoPrestamo()" data-permiso-editar="prestamos"
                     class="w-full lg:w-auto bg-black text-white px-6 py-3 rounded-xl font-black flex items-center justify-center gap-2 text-xs shadow-lg hover:scale-105 transition-transform">
                     <span class="material-symbols-outlined text-lg">add_card</span> Nuevo Préstamo
                 </button>
@@ -281,7 +282,7 @@
             <div class="p-4 lg:p-8 bg-gray-50/50 border-t border-gray-100 flex gap-4">
                 <button onclick="cerrarModalNuevoPrestamo()"
                     class="flex-1 py-4 text-[11px] font-black uppercase text-gray-400 hover:text-gray-600 transition-all">Cancelar</button>
-                <button onclick="guardarPrestamo()"
+                <button onclick="guardarPrestamo()" data-permiso-editar="prestamos"
                     class="flex-[2] bg-black text-white py-4 rounded-2xl font-black uppercase text-[11px] tracking-[0.15em] shadow-lg hover:brightness-110 active:scale-95 transition-all flex items-center justify-center gap-2">
                     <span class="material-symbols-outlined text-sm">save</span> Confirmar y Generar Gastos
                 </button>
@@ -377,7 +378,7 @@
             <div class="flex gap-3">
                 <button onclick="document.getElementById('modalLiquidarPrestamo').classList.add('hidden')"
                     class="flex-1 py-4 text-[10px] font-black uppercase text-gray-400">Cancelar</button>
-                <button onclick="confirmarLiquidacion()"
+                <button onclick="confirmarLiquidacion()" data-permiso-editar="prestamos"
                     class="flex-1 bg-black text-white rounded-2xl font-black uppercase text-[10px] tracking-widest shadow-lg">Liquidar
                     Todo</button>
             </div>
@@ -392,6 +393,7 @@
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             inyectarMenu('prestamos');
+            if (typeof Permisos !== 'undefined') Permisos.aplicarPermisosUI();
             if (typeof cargarPrestamos === 'function') cargarPrestamos();
             document.getElementById('fechaPrestamo').value = new Date().toISOString().split('T')[0];
         });
