--- a/productos.html
+++ b/productos.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
         rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="permisos.js"></script>
     <script>
         tailwind.config = {
             theme: {
@@ -101,11 +102,11 @@
                 </p>
             </div>
             <div class="flex flex-col lg:flex-row gap-4 w-full lg:w-auto">
-                <button onclick="abrirModalImportar()"
+                <button onclick="abrirModalImportar()" data-permiso-editar="productos"
                     class="w-full lg:w-auto bg-white border border-slate-200 px-6 py-3 rounded-2xl font-bold flex items-center justify-center gap-2 text-sm text-slate-600 hover:bg-slate-50 transition-all">
                     <span class="material-symbols-outlined text-lg">upload_file</span> Importar Excel
                 </button>
-                <button onclick="abrirModalProducto()"
+                <button onclick="abrirModalProducto()" data-permiso-editar="productos"
                     class="w-full lg:w-auto bg-primary text-black px-8 py-3 rounded-2xl font-black flex items-center justify-center gap-2 text-sm shadow-xl shadow-primary/20 hover:scale-[1.02] transition-all">
                     <span class="material-symbols-outlined text-lg">add</span> Nuevo Producto
                 </button>
@@ -194,11 +195,11 @@
         </div>
         <div id="contenidoDetalleProducto" class="flex-1 overflow-y-auto p-6 space-y-6"></div>
         <div class="p-6 border-t border-slate-100 flex gap-3">
-            <button onclick="abrirModalTransferencia()"
+            <button onclick="abrirModalTransferencia()" data-permiso-editar="productos"
                 class="flex-1 bg-slate-100 text-slate-700 py-4 rounded-2xl font-bold flex items-center justify-center gap-2 hover:bg-slate-200 transition-all">
                 <span class="material-symbols-outlined">sync_alt</span> Transferir Stock
             </button>
-            <button id="btnEditarProducto"
+            <button id="btnEditarProducto" data-permiso-editar="productos"
                 class="flex-1 bg-primary text-black py-4 rounded-2xl font-black flex items-center justify-center gap-2 shadow-lg shadow-primary/20 hover:scale-[1.02] transition-all">
                 <span class="material-symbols-outlined">edit</span> Editar
             </button>
@@ -448,7 +449,7 @@
             <div class="p-4 lg:p-8 bg-slate-50 border-t border-slate-100 flex gap-4">
                 <button type="button" onclick="cerrarModalProducto()"
                     class="flex-1 py-4 text-sm font-bold text-slate-500 hover:text-slate-700">Cancelar</button>
-                <button type="button" onclick="guardarProducto()"
+                <button type="button" onclick="guardarProducto()" data-permiso-editar="productos"
                     class="flex-[2] bg-primary text-black py-4 rounded-2xl font-black uppercase text-sm shadow-lg shadow-primary/20 hover:scale-[1.02] transition-all flex items-center justify-center gap-2">
                     <span class="material-symbols-outlined">save</span> Guardar Producto
                 </button>
@@ -552,6 +553,7 @@
                 <button type="button" onclick="cerrarModalImportar()"
                     class="flex-1 py-4 text-sm font-bold text-slate-500">Cancelar</button>
                 <button id="btnConfirmarImport" type="button" onclick="confirmarImportacion()" disabled
+                    data-permiso-editar="productos"
                     class="flex-[2] bg-primary text-black py-4 rounded-2xl font-black uppercase text-sm shadow-lg shadow-primary/20 disabled:opacity-50 disabled:cursor-not-allowed flex items-center justify-center gap-2">
                     <span class="material-symbols-outlined">check_circle</span> Importar Productos
                 </button>
@@ -608,7 +610,7 @@
                 </div>
             </div>
             <div class="p-4 lg:p-8 bg-slate-50 border-t border-slate-100">
-                <button type="button" onclick="ejecutarTransferencia()"
+                <button type="button" onclick="ejecutarTransferencia()" data-permiso-editar="productos"
                     class="w-full bg-primary text-black py-4 rounded-2xl font-black uppercase text-sm shadow-lg shadow-primary/20 hover:scale-[1.02] transition-all flex items-center justify-center gap-2">
                     <span class="material-symbols-outlined">sync_alt</span> Confirmar Transferencia
                 </button>
@@ -622,6 +624,7 @@
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             inyectarMenu('productos');
+            if (typeof Permisos !== 'undefined') Permisos.aplicarPermisosUI();
             cargarProductos();
         });
     </script>
