--- a/configuracion.html
+++ b/configuracion.html
@@ -235,75 +235,76 @@
             <h3 class="text-2xl font-bold mb-1">Usuario</h3>
             <p class="text-xs text-gray-400 font-bold uppercase tracking-wider mb-6">Credenciales y Permisos</p>
 
-            <input type="hidden" id="userId">
+            <form onsubmit="guardarUsuario(event)" class="space-y-4">
+                <input type="hidden" id="userId">
 
-            <div class="mb-4">
-                <label class="text-[10px] font-black text-primary uppercase block mb-1">Vincular con Empleado
-                    (RRHH)</label>
-                <select id="userEmpleado" class="input-config bg-emerald-50 border-emerald-100 font-bold">
-                    <option value="">-- Seleccionar Empleado (Opcional) --</option>
-                </select>
-            </div>
-
-            <div class="grid grid-cols-2 gap-4">
-                <div>
-                    <label class="text-[10px] font-bold text-gray-400 uppercase block mb-1">Nombre</label>
-                    <input type="text" id="userNombre" required class="input-config" placeholder="Nombre completo">
-                </div>
-                <div>
-                    <label class="text-[10px] font-bold text-gray-400 uppercase block mb-1">Email (Usuario)</label>
-                    <input type="email" id="userEmail" required class="input-config"
-                        placeholder="correo@agrigarden.com">
-                </div>
-            </div>
-
-            <div class="grid grid-cols-2 gap-4">
-                <div>
-                    <label class="text-[10px] font-bold text-gray-400 uppercase block mb-1">Rol / Tipo de
-                        Usuario</label>
-                    <select id="userRol" class="input-config bg-white">
-                        <option value="admin">Administrador</option>
-                        <option value="ventas_norte">Ventas mostrador Norte</option>
-                        <option value="ventas_sur">Ventas mostrador Sur</option>
-                        <option value="jefe_taller">Jefe de Taller</option>
-                        <option value="mecanico">Mecánico</option>
-                        <option value="vendedor_ruta">Vendedor en ruta</option>
-                        <option value="repartidor">Repartidor</option>
-                        <option value="viewer">Solo Lectura</option>
+                <div class="mb-4">
+                    <label class="text-[10px] font-black text-primary uppercase block mb-1">Vincular con Empleado
+                        (RRHH)</label>
+                    <select id="userEmpleado" class="input-config bg-emerald-50 border-emerald-100 font-bold">
+                        <option value="">-- Seleccionar Empleado (Opcional) --</option>
                     </select>
                 </div>
+
+                <div class="grid grid-cols-2 gap-4">
+                    <div>
+                        <label class="text-[10px] font-bold text-gray-400 uppercase block mb-1">Nombre</label>
+                        <input type="text" id="userNombre" required class="input-config" placeholder="Nombre completo">
+                    </div>
+                    <div>
+                        <label class="text-[10px] font-bold text-gray-400 uppercase block mb-1">Email (Usuario)</label>
+                        <input type="email" id="userEmail" required class="input-config"
+                            placeholder="correo@agrigarden.com">
+                    </div>
+                </div>
+
+                <div class="grid grid-cols-2 gap-4">
+                    <div>
+                        <label class="text-[10px] font-bold text-gray-400 uppercase block mb-1">Rol / Tipo de
+                            Usuario</label>
+                        <select id="userRol" class="input-config bg-white">
+                            <option value="admin">Administrador</option>
+                            <option value="ventas_norte">Ventas mostrador Norte</option>
+                            <option value="ventas_sur">Ventas mostrador Sur</option>
+                            <option value="jefe_taller">Jefe de Taller</option>
+                            <option value="mecanico">Mecánico</option>
+                            <option value="vendedor_ruta">Vendedor en ruta</option>
+                            <option value="repartidor">Repartidor</option>
+                            <option value="viewer">Solo Lectura</option>
+                        </select>
+                    </div>
+                    <div>
+                        <label class="text-[10px] font-bold text-gray-400 uppercase block mb-1">Sucursal
+                            Asignada</label>
+                        <select id="userSucursal" class="input-config bg-white">
+                            <option value="Ambas">Todas las Sucursales</option>
+                            <option value="Norte">Sucursal Norte</option>
+                            <option value="Sur">Sucursal Sur</option>
+                        </select>
+                    </div>
+                </div>
+
                 <div>
-                    <label class="text-[10px] font-bold text-gray-400 uppercase block mb-1">Sucursal
-                        Asignada</label>
-                    <select id="userSucursal" class="input-config bg-white">
-                        <option value="Ambas">Todas las Sucursales</option>
-                        <option value="Norte">Sucursal Norte</option>
-                        <option value="Sur">Sucursal Sur</option>
-                    </select>
+                    <label class="text-[10px] font-bold text-gray-400 uppercase block mb-1">Contraseña</label>
+                    <input type="text" id="userPass" required class="input-config" placeholder="******">
                 </div>
-            </div>
 
-            <div>
-                <label class="text-[10px] font-bold text-gray-400 uppercase block mb-1">Contraseña</label>
-                <input type="text" id="userPass" required class="input-config" placeholder="******">
-            </div>
-
-            <!-- MATRIZ DE PERMISOS -->
-            <div class="pt-4 border-t border-gray-100">
-                <p class="text-[10px] font-black text-gray-400 uppercase mb-4 tracking-tighter">Matriz de Permisos
-                    por Módulo</p>
-                <div id="matrizPermisos" class="bg-gray-50 rounded-xl p-4 border border-gray-100">
-                    <!-- JS Injection -->
+                <!-- MATRIZ DE PERMISOS -->
+                <div class="pt-4 border-t border-gray-100">
+                    <p class="text-[10px] font-black text-gray-400 uppercase mb-4 tracking-tighter">Matriz de Permisos
+                        por Módulo</p>
+                    <div id="matrizPermisos" class="bg-gray-50 rounded-xl p-4 border border-gray-100">
+                        <!-- JS Injection -->
+                    </div>
                 </div>
-            </div>
 
-            <div class="flex gap-3 mt-8 pt-4 border-t border-gray-100">
-                <button type="button" onclick="cerrarModalUsuario()"
-                    class="flex-1 py-3 text-gray-400 font-bold text-xs hover:text-black">CANCELAR</button>
-                <button type="submit"
-                    class="flex-1 bg-black text-white py-3 rounded-xl font-bold text-xs hover:bg-gray-800">GUARDAR
-                    USUARIO</button>
-            </div>
+                <div class="flex gap-3 mt-8 pt-4 border-t border-gray-100">
+                    <button type="button" onclick="cerrarModalUsuario()"
+                        class="flex-1 py-3 text-gray-400 font-bold text-xs hover:text-black">CANCELAR</button>
+                    <button type="submit"
+                        class="flex-1 bg-black text-white py-3 rounded-xl font-bold text-xs hover:bg-gray-800">GUARDAR
+                        USUARIO</button>
+                </div>
             </form>
             <div class="mt-4 pt-4 border-t border-gray-100 hidden" id="divEliminarUser">
                 <button onclick="eliminarUsuario()"
