--- a/compras.html
+++ b/compras.html
@@ -487,6 +487,7 @@
     </div>
 
     <script src="api.js"></script>
+    <script src="notifications.js"></script>
     <script src="menu.js"></script>
     <script src="compras.js"></script>
     <script>
