--- a/dashboard.html
+++ b/dashboard.html
@@ -240,6 +240,7 @@
     <script src="auth.js"></script>
     <script src="permisos.js"></script>
     <script src="menu.js"></script>
+    <script src="notifications.js"></script>
     <script src="dashboard.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
