--- a/gastos.html
+++ b/gastos.html
@@ -344,6 +344,7 @@
     </div>
 
     <script src="api.js"></script>
+    <script src="notifications.js"></script>
     <script src="auth.js"></script>
     <script src="permisos.js"></script>
     <script src="menu.js"></script>
