--- a/ingresos.html
+++ b/ingresos.html
@@ -364,6 +364,7 @@
     </div>
 
     <script src="api.js"></script>
+    <script src="notifications.js"></script>
     <script src="auth.js"></script>
     <script src="menu.js"></script>
     <script src="export_helper.js"></script>
