--- a/rrhh_tareas.html
+++ b/rrhh_tareas.html
@@ -55,7 +55,8 @@
 
     <div id="sidebar-container"></div>
 
-    <main class="pt-20 lg:pt-0 flex-1  p-6 md:p-4 lg:p-8 overflow-y-auto bg-slate-50/50 flex flex-col lg:flex-row gap-6">
+    <main
+        class="pt-20 lg:pt-0 flex-1  p-6 md:p-4 lg:p-8 overflow-y-auto bg-slate-50/50 flex flex-col lg:flex-row gap-6">
 
         <!-- COLUMNA PRINCIPAL -->
         <div class="flex-1 flex flex-col gap-4 lg:p-8 min-w-0">
@@ -422,6 +423,7 @@
     </div>
 
     <script src="api.js"></script>
+    <script src="notifications.js"></script>
     <script src="menu.js"></script>
     <script src="rrhh_tareas.js"></script>
     <script>
