--- a/dashboard.html
+++ b/dashboard.html
@@ -65,11 +65,12 @@
                     <option value="Norte">Sucursal Norte</option>
                     <option value="Sur">Sucursal Sur</option>
                 </select>
-                <div
-                    class="size-10 bg-primary/20 rounded-full flex items-center justify-center text-primary border border-primary/30">
-                    <span class="material-symbols-outlined">analytics</span>
-                </div>
             </div>
+            </div>
+            <button onclick="NotificationsManager.notify('Prueba Agrigarden', '¡Las notificaciones están funcionando!')"
+                class="hidden lg:flex items-center gap-2 bg-slate-100 text-slate-600 px-4 py-2 rounded-xl text-[10px] font-black uppercase hover:bg-slate-200 transition-all">
+                <span class="material-symbols-outlined text-sm">notifications_active</span> Probar Notificación
+            </button>
         </header>
 
         <!-- ROW 1: FINANCIAL & HR PERFORMANCE -->
