--- a/dashboard.html
+++ b/dashboard.html
@@ -70,7 +70,7 @@
                 </select>
             </div>
             </div>
-            <button onclick="NotificationsManager.notify('Prueba Agrigarden', '¡Las notificaciones están funcionando!')"
+            <button onclick="NotificationsManager.runDiagnostics()"
                 class="hidden lg:flex items-center gap-2 bg-slate-100 text-slate-600 px-4 py-2 rounded-xl text-[10px] font-black uppercase hover:bg-slate-200 transition-all">
                 <span class="material-symbols-outlined text-sm">notifications_active</span> Probar Notificación
             </button>
