--- a/configuracion.html
+++ b/configuracion.html
@@ -283,6 +283,14 @@
                                 </select>
                             </div>
                         </div>
+                        <div>
+                            <label class="text-[10px] font-bold text-gray-500 uppercase block mb-1">Vincular Empleado
+                                (RRHH)</label>
+                            <select id="userEmpleadoId" class="input-config bg-white">
+                                <option value="">Sin vincular</option>
+                                <!-- JS Injection -->
+                            </select>
+                        </div>
                     </div>
 
                     <!-- Grilla de Permisos -->
