--- a/ingresos.html
+++ b/ingresos.html
@@ -310,6 +310,7 @@
                     <select id="editTipo" class="input-edit">
                         <option value="Venta Directa">Venta Directa</option>
                         <option value="Servicio">Servicio</option>
+                        <option value="ABONO">Abono</option>
                     </select>
                 </div>
                 <div class="space-y-2">
